SERVER-79520 Fix QE sharded upsert on non-shard key